--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,12 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>ブログ</h1>
+  <h1>ブログの記事一覧</h1>
+<% @posts.each do |post| %>
+<p>ID:<%= post.id %></p>
+<p>タイトル:<%= post.title %></p>
+<p>本文:<%= post.body %></p>
+<hr>
+<% end %>
 </body>
 </html>
