showファイル作成

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,5 +6,20 @@
 </head>
 <body>
 
+  <h1>記事内容</h1>
+<p>
+  <b> タイトル：<%= @post.title %></b>
+</p>
+
+<p>
+  <b> カテゴリ：<%= @post.category %></b>
+</p>
+
+<p>
+  <b> 本文：<%= @post.body %></b>
+</p>
+
+
+
 </body>
 </html>
