--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,20 +6,15 @@
 </head>
 <body>
 
-  <h1>記事内容</h1>
-<p>
-  <b> タイトル：<%= @post.title %></b>
-</p>
+<h1>記事内容</h1>
+<p> タイトル：</p>
+<p> <%= @post.title %></p>
 
-<p>
-  <b> カテゴリ：<%= @post.category %></b>
-</p>
+<p> カテゴリ：</p>
+<p> <%= @post.category %></p>
 
-<p>
-  <b> 本文：<%= @post.body %></b>
-</p>
-
-
+<p> 本文：</p>
+<p> <%= @post.body %></p>
 
 </body>
 </html>
