--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,31 @@
-new.html.erb
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+</head>
+<body>
+
+
+
+<h1>新規記事投稿</h1>
+<%= form_for @post do |f| %>
+
+ <p>タイトル<br>
+ <%= f.text_field :title %>
+ </p>
+
+ <p>カテゴリ<br>
+ <%= f.text_field :category %>
+ </p>
+
+ <p>本文<br>
+ <%= f.text_area :body %>
+ </p>
+
+<%= f.submit '投稿する' %>
+
+<% end %>
+
+</body>
+</html>
