--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,5 +16,9 @@
 <p> 本文：</p>
 <p> <%= @post.body %></p>
 
+    <%= link_to '戻る', posts_path %>
+    <%= link_to '編集', edit_post_path(@post) %>
+    <%= link_to '削除', post_path, method: :delete %>
+
 </body>
 </html>
