--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,10 @@
   <title>Document</title>
 </head>
 <body>
+
+<div class="row">
+  <div class="col-md-8">
+
   <h1>ブログの記事一覧</h1>
 <% @posts.each do |post| %>
 <p>ID:<%= post.id %></p>
@@ -12,5 +16,16 @@
 <p>本文:<%= post.body %></p>
 <hr>
 <% end %>
+
+</div>
+
+  <div class="col-md-4">
+    <h1>ブログ運営者情報</h1>
+    <p><%= image_tag @author.image_url, width: 200  %></p>
+    <p>担当：<%= @author.name %></p>
+    <p>一言：<%= @author.description %></p>
+  </div>
+  </div>
+
 </body>
 </html>
