--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-<body>
-
+<div class="row">
+  <div class="col-md-8">
 
   <h1>ブログの記事一覧</h1>
+  <hr>
+
+ <%= link_to '記事を新規作成', new_post_path, class:"btn btn-primary " %>
+
+<hr>
 <% @posts.each do |post| %>
 <p>ID:<%= post.id %></p>
 <p>タイトル:<%= post.title %></p>
@@ -15,7 +14,12 @@
 <hr>
 <% end %>
 
+</div>
 
+  <div class="col-md-4">
+    <h1>ブログ運営者情報</h1>
+    <p>hoge</p>
+    <p>担当：hoge</p>
+    <p>一言：hoge</p>
+  </div>
 
-</body>
-</html>
