--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-<body>
-
-
-
 <h1>新規記事投稿</h1>
 <%= form_for @post do |f| %>
 
@@ -23,9 +13,7 @@
  <%= f.text_area :body %>
  </p>
 
-<%= f.submit '投稿する' %>
+<%= f.submit '投稿する' , class:"btn btn-primary "%>
+
 
 <% end %>
-
-</body>
-</html>
