--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-<body>
-
 <h1>記事内容</h1>
 <p> タイトル：</p>
 <p> <%= @post.title %></p>
@@ -16,9 +8,6 @@
 <p> 本文：</p>
 <p> <%= @post.body %></p>
 
-    <%= link_to '戻る', posts_path %>
-    <%= link_to '編集', edit_post_path(@post) %>
-    <%= link_to '削除', post_path, method: :delete %>
-
-</body>
-</html>
+    <%= link_to '戻る', posts_path , class:"btn btn-primary"%>
+    <%= link_to '編集', edit_post_path(@post) , class:"btn btn-primary"%>
+    <%= link_to '削除', post_path, method: :delete , class:"btn btn-primary"%>
