--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -14,6 +14,8 @@
  <%= f.text_area :body %>
  </p>
 
+    <%= link_to '戻る', posts_path , class:"btn btn-primary"%>
+
 <%= f.submit '更新する', class:"btn btn-primary "%>
 
 <% end %>
